--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -81,7 +81,7 @@
 
     <div class="row">
         <div class="col-md-6 recipe-ingredients-parent">
-            <div class="panel panel-body recipe-ingredients">
+            <div class="{% comment %}panel{% endcomment %} panel-body recipe-ingredients post-it-left">
                 <h3 class="recipe-panel-title">Ingredients</h3>
                 <ul>
                     <li>200g de azúcar</li>
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="col-md-6 recipe-notes-parent">
-            <div class="panel panel-body recipe-notes">
+            <div class="{% comment %}panel {% endcomment %}panel-body recipe-notes postit">
                 <h3 class="recipe-panel-title">Notes</h3>
 
                 <p>Esta es una receta que os hará quedar bien con los más peques de la casa. Generalmente a los
