--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -339,6 +339,30 @@
                         <hr>
                     </div>
                     <!-- /Step item -->
+
+                    {% for step in form.get_cleaned_steps %}
+                        <div class="repeatable-row">
+                            <div class="form-group step">
+                                <div class="col-sm-1">
+                                    <span>{{ forloop.counter }}</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control input-lg"
+                                              placeholder="What is the first step?…"
+                                              rows="4"
+                                              name="step_{{ forloop.counter0 }}" id="id_step_{{ forloop.counter0 }}"
+                                            >{{ step }}</textarea>
+                                </div>
+                                <div class="col-sm-2 step-picture" data-step-index="{row-count-placeholder}">
+                                    <a class="btn btn-default step-picture-add"><span
+                                            class="glyphicon glyphicon-camera"></span></a>
+                                    <img class="img-rounded"
+                                         src="" style="display: none">
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
+                    {% endfor %}
                 </div>
                 <div class="form-group step">
                     <div class="col-sm-1">
