--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -33,21 +33,12 @@
     <div class="col-md-6 login-form">
         <div class="col-md-9 col-md-offset-2">
             <form class="panel panel-body" role="form" action="{% url 'login' %}" method="post">
-                {% for message in messages %}
-                    <div class="alert alert-danger alert-dismissable">
-                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-                            &times;
-                        </button>
-                        <li class="{{ message.tags }}">
-                            {% if 'safe' in message.tags %}
-                                {{ message|safe }}
-                            {% else %}
-                                <strong>Error</strong>
-                                {{ message }}
-                            {% endif %}
-                        </li>
-                    </div>
-                {% endfor %}
+                {% if form.errors %}
+                    <div class="alert alert-danger">{% trans "Username and password don't match." %}</div>
+                {% endif %}
+                {% if next %}
+                    <div class="alert alert-warning">{% trans "You need to be logged-in to view this page." %}</div>
+                {% endif %}
                 <div class="form-group">
                     {% csrf_token %}
                     {% if next %}
