Mapeado enlace de registro en la pantalla de login.
Añadido enlace para recuperar tu contraseña, para que a @serrodcal no le den espasmos.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -768,6 +768,11 @@ header .container {
     text-align: center;
 }
 
-.login-form-signup a{
+.login-form-forgot {
+    text-align: center;
+    margin-top: 5px;
+}
+
+.login-form-forgot a, .login-form-signup a{
     color: #CC3E27;
 }
