--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -47,12 +47,12 @@
                     <h2 class="login-form-heading">{% trans "Please sign in" %}</h2>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" id="username" name="username" placeholder="Username"
+                    <input class="form-control" type="text" id="username" name="username" placeholder="{% trans "Username" %}"
                            required
                            autofocus>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="password" name="password" id="password" placeholder="Password"
+                    <input class="form-control" type="password" name="password" id="password" placeholder="{% trans "Password" %}"
                            required>
                 </div>
                 <div class="form-group login-form-remember">
