Añadida dependencia a requirements.txt y arreglado problema con Twiiter.

--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -98,7 +98,7 @@
                       data-callback="signInCallback">
                 </span>
             </div></div>
-                <div class="col-md-4"><a disabled class="btn btn-twitter" href="{% url 'social:begin' 'twitter' %}?next={% url 'main' %}"><i class="fa fa-twitter"></i> | Login with Twitter</a></div>
+                <div class="col-md-4"><a class="btn btn-twitter" href="{% url 'social:begin' 'twitter' %}?next={% url 'main' %}"><i class="fa fa-twitter"></i> | Login with Twitter</a></div>
                 <div class="col-md-4"><a class="btn btn-facebook" href="{% url 'social:begin' 'facebook' %}?next={% url 'main' %}"><i class="fa fa-facebook"></i> | Login with Facebook</a></div>
             </div>
         </div>
