--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -12,6 +12,8 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'webapp/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/starter-template.css' %}" rel="stylesheet">
+    <link href="{% static 'webapp/css/font-awesome.min.css' %}" rel="stylesheet">
+
 
     {% block custom_css %}
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
