--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -53,6 +53,31 @@
                  src="https://lh5.googleusercontent.com/-OiRh2CnezSw/U1A_gITdD4I/AAAAAAAASss/dauhnw6AtSw/w608-h609-no/004recortada.jpg">
             <h5 class="recipe-author recipe-author-name">By Virgi</h5>
         </a>
+
+        <!-- Votes overaly -->
+        <div class="recipe-votes-container">
+            <div class="recipe-votes">
+                <div class="recipe-votes-buttons">
+                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-up"></i> Like</a>
+                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-down"></i></a>
+                </div>
+
+                <div class="recipe-votes-indicators">
+                    <span class="recipe-votes-indicator"><i class="fa fa-thumbs-up"></i>456</span>
+                    <span class="recipe-votes-indicator"><i class="fa fa-thumbs-down"></i>3</span>
+                    <span class="recipe-votes-count">534</span>
+                </div>
+
+
+                <div class="progress recipe-votes-progress">
+                    <div class="progress-bar progress-bar-success" style="width: 90%">
+                    </div>
+                    <div class="progress-bar progress-bar-warning" style="width: 10%">
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <div class="panel panel-body row recipe-description">
@@ -428,7 +453,18 @@
                     },
                     function () {
                         $(".recipe-author").removeClass("hover");
-                    });
+                    }
+            );
+
+            //XXX Cuidado, valores puestos a mano. Se podría animar con una clase usando jQueryUI
+            $(".recipe-votes-container").hover(
+                    function () {
+                        $(".recipe-votes").animate({"margin-top": 0})
+                    },
+                    function() {
+                        $(".recipe-votes").animate({"margin-top": "-40px"})
+                    }
+            );
         });
     </script>
 {% endblock %}
