--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -811,25 +811,25 @@ header .container {
 
 .recipe-votes-container {
     position: absolute;
-    top: 0;
-    right: 0;
+    bottom: 0;
+    left: 0;
     overflow: hidden;
 }
 
 .recipe-votes {
     background-color: #fff;
-    padding: 5px 10px 10px 10px;
+    padding: 5px 15px 0 15px;
     border-radius: 5px;
-    margin-top: -40px;
+    margin-bottom: -40px;
 }
 
 /*.recipe-votes:hover {
-    margin-top: 0;
+    margin-bottom: 0;
 }*/
 
 .recipe-votes-progress {
     height: 4px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
 }
 
 .recipe-votes-indicators {
@@ -855,6 +855,7 @@ header .container {
 
 .recipe-votes-buttons {
     height: 40px;
+    margin-top: 2px;
 }
 
 .recipe-votes-like-btn {
