--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -311,19 +311,11 @@
                 <img class="img-circle recipe-comment-picture"
                      src="https://lh5.googleusercontent.com/-OiRh2CnezSw/U1A_gITdD4I/AAAAAAAASss/dauhnw6AtSw/w608-h609-no/004recortada.jpg">
 
-                <div class="recipe-comment-form-input">
                     <form method="POST" action="{% url 'comment' receta.id %}">
-                        <div class="comment-form">
-                            <div class="comment-bocadillo">
-                                <div class="bocadillo-efecto efecto-inferior"></div>
-                                <div class="bocadillo-efecto efecto-superior"></div>
-                            </div>
-                            <textarea class="col-md-12" type="text" name="text"
-                                      placeholder="Escriba un comentario..." rows="4"></textarea>
-                        </div>
+                            <textarea class="form-control" name="text"
+                                      placeholder="Escribe un comentario sobre la receta…" rows="5"></textarea>
                         <input class="plus btn btn-default" type="submit">
                     </form>
-                </div>
             </div>
 
         </div>
@@ -483,19 +475,6 @@
                     },
                     function () {
                         $(".recipe-votes").animate({"margin-bottom": "-40px"})
-                    }
-            );
-
-            var $commentForm = $(".recipe-comment-form textarea");
-            var $input = $(".comment-bocadillo, .comment-form");
-            $commentForm.focusin(
-                    function () {
-                        $input.css("background-color", "#fefefe")
-                    }
-            );
-            $commentForm.focusout(
-                    function () {
-                        $input.css("background-color", "#e9e9e9")
                     }
             );
         });
